<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#B9FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nikesh.jobportal.Activity.LoginForm">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/welcome"
        android:layout_margin="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/login_layout"
        android:gravity="center"
        android:orientation="vertical">



        <EditText
            android:id="@+id/etemail"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="nikesh@gmail.com"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_design"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF0000" />


        <EditText
            android:id="@+id/etpassword"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:text="nikesh123"
            android:layout_height="wrap_content"
            android:background="@drawable/input_design"
            android:drawableLeft="@drawable/password_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Show Password"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="Forgot Password"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textColor="#FF0000"
                android:textSize="16sp" />

        </LinearLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="Login"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="New User"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>